# auto-impl-ops

./: .gitlab-ci.yml  Cargo.toml  README.md
examples/: a.rs
src/: lib.rs  tests.rs
